--- a/Calculator/Base.lproj/Main.storyboard
+++ b/Calculator/Base.lproj/Main.storyboard
@@ -201,6 +201,33 @@
             </objects>
             <point key="canvasLocation" x="641" y="-983"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="1d0-5X-VJn">
+            <objects>
+                <viewController id="0rS-1h-1c4" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Zv8-nw-DGw">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="로그인 성공" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HoH-Zz-W76">
+                                <rect key="frame" x="168" y="438" width="78" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="pga-WS-Pbe"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="HoH-Zz-W76" firstAttribute="centerY" secondItem="Zv8-nw-DGw" secondAttribute="centerY" id="cRZ-Ud-v7Q"/>
+                            <constraint firstItem="HoH-Zz-W76" firstAttribute="centerX" secondItem="Zv8-nw-DGw" secondAttribute="centerX" id="eXs-2e-gFt"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ISi-XG-Pyz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1935" y="-976"/>
+        </scene>
         <!--Email Register View Controller-->
         <scene sceneID="dNZ-v1-BW6">
             <objects>
